Added personality feature to user API
